--- a/package.json
+++ b/package.json
@@ -38,8 +38,8 @@
         "vue-html-loader": "^1.0.0",
         "vue-loader": "^9.4.0",
         "vue-style-loader": "^1.0.0",
-        "webpack": "^1.12.2",
-        "webpack-dev-middleware": "^1.4.0",
+        "webpack": "^2.1.0-beta.22",
+        "webpack-dev-middleware": "^1.8.1",
         "webpack-hot-middleware": "^2.6.0",
         "webpack-merge": "^0.8.3"
     }
