--- a/package.json
+++ b/package.json
@@ -11,8 +11,7 @@
     },
     "dependencies": {
         "babel-runtime": "^6.0.0",
-        "vue": "^2.0.0-rc.6",
-        "vuex": "^2.0.0-rc.5"
+        "vue": "^2.0.0-rc.6"
     },
     "devDependencies": {
         "babel-core": "^6.0.0",
@@ -31,7 +30,9 @@
         "html-webpack-plugin": "^2.8.1",
         "http-proxy-middleware": "^0.12.0",
         "json-loader": "^0.5.4",
+        "node-sass": "^3.10.0",
         "ora": "^0.2.0",
+        "sass-loader": "^4.0.2",
         "shelljs": "^0.6.0",
         "url-loader": "^0.5.7",
         "vue-hot-reload-api": "^1.2.0",
