--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "node build/dev-server.js",
     "build": "node build/build.js",
-    "test": ""
+    "unit": "karma start test/unit/karma.conf.js --single-run",
+    "test": "npm run unit"
   },
   "main": "./src/index.js",
   "dependencies": {
@@ -21,6 +22,7 @@
     "babel-plugin-transform-runtime": "^6.0.0",
     "babel-preset-stage-2": "^6.0.0",
     "babel-register": "^6.0.0",
+    "chai": "^3.5.0",
     "connect-history-api-fallback": "^1.1.0",
     "css-loader": "^0.23.0",
     "eventsource-polyfill": "^0.9.6",
@@ -31,6 +33,7 @@
     "html-webpack-plugin": "^2.8.1",
     "http-proxy-middleware": "^0.12.0",
     "json-loader": "^0.5.4",
+    "mocha": "^3.0.2",
     "node-sass": "^3.10.0",
     "ora": "^0.2.0",
     "sass-loader": "^4.0.2",
@@ -43,7 +46,22 @@
     "webpack": "^1.13.2",
     "webpack-dev-middleware": "^1.8.1",
     "webpack-hot-middleware": "^2.6.0",
-    "webpack-merge": "^0.8.3"
+    "webpack-merge": "^0.8.3",
+    "karma": "^0.13.15",
+    "karma-coverage": "^0.5.5",
+    "karma-mocha": "^0.2.2",
+    "karma-phantomjs-launcher": "^1.0.0",
+    "karma-sinon-chai": "^1.2.0",
+    "karma-sourcemap-loader": "^0.3.7",
+    "karma-spec-reporter": "0.0.24",
+    "karma-webpack": "^1.7.0",
+    "lolex": "^1.4.0",
+    "chai": "^3.5.0",
+    "sinon": "^1.17.3",
+    "sinon-chai": "^2.8.0",
+    "inject-loader": "^2.0.1",
+    "isparta-loader": "^2.0.0",
+    "phantomjs-prebuilt": "^2.1.3"
   },
   "license": "MIT",
   "repository": "https://github.com/domonji/vue-clock-picker"
