--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vue-clock-picker",
-  "version": "0.4.0",
+  "version": "0.4.1",
   "description": "A lite time picker based on Vue2.0",
   "author": "domon <domonji95@gmail.com>",
   "scripts": {
@@ -11,9 +11,10 @@
   },
   "main": "./src/index.js",
   "dependencies": {
+    "babel-preset-es2015": "^6.22.0",
     "babel-runtime": "^6.0.0",
-    "vue": "^2.0.0-rc.6",
     "pug": "^2.0.0-beta6",
+    "vue": "^2.0.0-rc.6",
     "vue-loader": "^9.4.0"
   },
   "devDependencies": {
@@ -32,21 +33,9 @@
     "function-bind": "^1.0.2",
     "html-webpack-plugin": "^2.8.1",
     "http-proxy-middleware": "^0.12.0",
+    "inject-loader": "^2.0.1",
+    "isparta-loader": "^2.0.0",
     "json-loader": "^0.5.4",
-    "mocha": "^3.0.2",
-    "node-sass": "^3.10.0",
-    "ora": "^0.2.0",
-    "sass-loader": "^4.0.2",
-    "shelljs": "^0.6.0",
-    "url-loader": "^0.5.7",
-    "vue-hot-reload-api": "^1.2.0",
-    "vue-html-loader": "^1.0.0",
-    "vue-loader": "^9.4.0",
-    "vue-style-loader": "^1.0.0",
-    "webpack": "^1.13.2",
-    "webpack-dev-middleware": "^1.8.1",
-    "webpack-hot-middleware": "^2.6.0",
-    "webpack-merge": "^0.8.3",
     "karma": "^0.13.15",
     "karma-coverage": "^0.5.5",
     "karma-mocha": "^0.2.2",
@@ -56,12 +45,23 @@
     "karma-spec-reporter": "0.0.24",
     "karma-webpack": "^1.7.0",
     "lolex": "^1.4.0",
-    "chai": "^3.5.0",
+    "mocha": "^3.0.2",
+    "node-sass": "^3.10.0",
+    "ora": "^0.2.0",
+    "phantomjs-prebuilt": "^2.1.3",
+    "sass-loader": "^4.0.2",
+    "shelljs": "^0.6.0",
     "sinon": "^1.17.3",
     "sinon-chai": "^2.8.0",
-    "inject-loader": "^2.0.1",
-    "isparta-loader": "^2.0.0",
-    "phantomjs-prebuilt": "^2.1.3"
+    "url-loader": "^0.5.7",
+    "vue-hot-reload-api": "^1.2.0",
+    "vue-html-loader": "^1.0.0",
+    "vue-loader": "^9.4.0",
+    "vue-style-loader": "^1.0.0",
+    "webpack": "^1.13.2",
+    "webpack-dev-middleware": "^1.8.1",
+    "webpack-hot-middleware": "^2.6.0",
+    "webpack-merge": "^0.8.3"
   },
   "license": "MIT",
   "repository": "https://github.com/domonji/vue-clock-picker"
