--- a/package.json
+++ b/package.json
@@ -11,13 +11,11 @@
   },
   "main": "./src/index.js",
   "dependencies": {
-    "babel-preset-es2015": "^6.22.0",
-    "babel-runtime": "^6.0.0",
-    "pug": "^2.0.0-beta6",
-    "vue": "^2.0.0-rc.6",
-    "vue-loader": "^9.4.0"
+    "vue": "^2.0.0-rc.6"
   },
   "devDependencies": {
+    "babel-preset-es2015": "^6.22.0",
+    "babel-runtime": "^6.0.0",
     "babel-core": "^6.0.0",
     "babel-loader": "^6.0.0",
     "babel-plugin-transform-runtime": "^6.0.0",
@@ -48,12 +46,14 @@
     "mocha": "^3.0.2",
     "node-sass": "^3.10.0",
     "ora": "^0.2.0",
+    "pug": "^2.0.0-beta6",
     "phantomjs-prebuilt": "^2.1.3",
     "sass-loader": "^4.0.2",
     "shelljs": "^0.6.0",
     "sinon": "^1.17.3",
     "sinon-chai": "^2.8.0",
     "url-loader": "^0.5.7",
+    "vue-loader": "^9.4.0",
     "vue-hot-reload-api": "^1.2.0",
     "vue-html-loader": "^1.0.0",
     "vue-loader": "^9.4.0",
